<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sample Button Drawer Animation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="btn_show_options">Show Options</string>
    <string name="btn_view_list">View List</string>
    <string name="btn_view_thumbnails">View Thumbnails</string>
    <string name="btn_view_location">View Location</string>
    
    <string name="img_android">Android</string>
</resources>
