<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_show_thumbnails"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/annonce_option_thumbnail"
        android:contentDescription="@string/btn_view_thumbnails"
        android:onClick="showOptionsClicked" />

    <Button
        android:id="@+id/btn_show_location"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/annonce_option_location"
        android:contentDescription="@string/btn_view_location" />

    <Button
        android:id="@+id/btn_show_list"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/annonce_option_list"
        android:contentDescription="@string/btn_view_list" />

    <Button
        android:id="@+id/btn_show_options"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/annonce_show_options"
        android:contentDescription="@string/btn_show_options" />

    <ImageView
        android:id="@+id/img_android"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/img_android"
        android:src="@drawable/ic_launcher"
        android:visibility="invisible" />

</RelativeLayout>